added cache and logs dir creation

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,3 +13,7 @@
 
 - include: doctrine_schema_update.yml
   when: "symfony2_doctrine_schema_update != []"
+
+- include: create_cache.yml
+
+- include: creare_logs.yml
