--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -14,6 +14,6 @@
 - include: doctrine_schema_update.yml
   when: "symfony2_doctrine_schema_update != []"
 
-- include: create_cache.yml
 
-- include: creare_logs.yml
+- include: create_cache.yml
+- include: create_logs.yml
