--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -12,3 +12,7 @@ symfony2_composer_install: true
 symfony2_clear_cache: true
 
 symfony2_doctrine_schema_update: [] # List of objects with properties "em" and "env"
+
+# not very useful for customisation, but ok for the needs of one site per box
+symfony2_cache_path: "{{ symfony2_project_root }}/{{ ansible_fqdn }}/app/cache"
+symfony2_log_path: "{{ symfony2_project_root }}/{{ ansible_fqdn }}/app/logs"
