--- a/tasks/create_logs.yml
+++ b/tasks/create_logs.yml
@@ -1,15 +1,15 @@
 - name: logs symfony 2
   file: >
-    path="{{ logs_path }}"
+    path="{{ symfony2_log_path }}"
     state=directory
   sudo: yes
 
 - name: acl symfony 2
   shell: >
-    setfacl -R -m u:www-data:rwX -m g:www-data:rwX {{ logs_path }}
+    setfacl -R -m u:www-data:rwX -m g:www-data:rwX {{ symfony2_log_path }}
   sudo: yes
 
 - name: acl default symfony 2
   shell: >
-    setfacl -dR -m u:www-data:rwx -m g:www-data:rwX {{ logs_path }}
+    setfacl -dR -m u:www-data:rwx -m g:www-data:rwX {{ symfony2_log_path }}
   sudo: yes
