better user / group default

--- a/tasks/create_cache.yml
+++ b/tasks/create_cache.yml
@@ -6,10 +6,10 @@
 
 - name: acl symfony 2
   shell: >
-    setfacl -R -m u:www-data:rwX -m g:www-data:rwX {{ symfony2_cache_path }}
+    setfacl -R -m u:{{ nginx_user }}:rwX -m g:{{ nginx_group }}:rwX {{ symfony2_cache_path }}
   sudo: yes
 
 - name: acl default symfony 2
   shell: >
-    setfacl -dR -m u:www-data:rwx -m g:www-data:rwX {{ symfony2_cache_path }}
+    setfacl -dR -m u:{{ nginx_user }}:rwx -m g:{{ nginx_group }}:rwX {{ symfony2_cache_path }}
   sudo: yes
