--- a/tasks/create_cache.yml
+++ b/tasks/create_cache.yml
@@ -3,6 +3,8 @@
     path="{{ symfony2_cache_path }}"
     state=directory
     owner="{{ nginx_user }}" group="{{ nginx_group }}"
+    mode=0775
+    recurse=true
   sudo: yes
 
 - name: acl symfony 2
