--- a/tasks/create_app_dir.yml
+++ b/tasks/create_app_dir.yml
@@ -3,4 +3,6 @@
     path="{{ symfony2_project_root }}/app"
     state=directory
     owner="{{ nginx_user }}" group="{{ nginx_group }}"
+    mode=0775
+    recurse=true
   sudo: yes
