--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,5 +2,5 @@
 - name: "restart web server"
   sudo: yes
   service:
-    name: "{{ symfony2_web_server }}"
+    name: "{{ symfony_web_server }}"
     state: restarted
