--- a/tasks/create_cache.yml
+++ b/tasks/create_cache.yml
@@ -1,18 +1,18 @@
-- name: cache symfony 2
+- name: symfony cache
   file: >
-    path="{{ symfony2_cache_path }}"
+    path="{{ symfony_cache_path }}"
     state=directory
     owner="{{ nginx_user }}" group="{{ nginx_group }}"
     mode=0775
     recurse=true
   sudo: yes
 
-- name: acl symfony 2
+- name: symfony acl 
   shell: >
-    setfacl -R -m u:{{ nginx_user }}:rwX -m g:{{ nginx_group }}:rwX {{ symfony2_cache_path }}
+    setfacl -R -m u:{{ nginx_user }}:rwX -m g:{{ nginx_group }}:rwX {{ symfony_cache_path }}
   sudo: yes
 
-- name: acl default symfony 2
+- name: symfony acl default 
   shell: >
-    setfacl -dR -m u:{{ nginx_user }}:rwx -m g:{{ nginx_group }}:rwX {{ symfony2_cache_path }}
+    setfacl -dR -m u:{{ nginx_user }}:rwx -m g:{{ nginx_group }}:rwX {{ symfony_cache_path }}
   sudo: yes
