--- a/tasks/create_logs.yml
+++ b/tasks/create_logs.yml
@@ -1,18 +1,18 @@
-- name: logs symfony 2
+- name: symfony logs 
   file: >
-    path="{{ symfony2_log_path }}"
+    path="{{ symfony_log_path }}"
     state=directory
     owner="{{ nginx_user }}" group="{{ nginx_group }}"
     mode=0775
     recurse=true
   sudo: yes
 
-- name: acl symfony 2
+- name: symfony acl - logs
   shell: >
-    setfacl -R -m u:{{ nginx_user }}:rwX -m g:{{ nginx_group }}:rwX {{ symfony2_log_path }}
+    setfacl -R -m u:{{ nginx_user }}:rwX -m g:{{ nginx_group }}:rwX {{ symfony_log_path }}
   sudo: yes
 
-- name: acl default symfony 2
+- name: symfony acl default - logs
   shell: >
-    setfacl -dR -m u:{{ nginx_user }}:rwx -m g:{{ nginx_group }}:rwX {{ symfony2_log_path }}
+    setfacl -dR -m u:{{ nginx_user }}:rwx -m g:{{ nginx_group }}:rwX {{ symfony_log_path }}
   sudo: yes
