--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,18 +2,20 @@
 
 symfony_environment: production
 
-symfony2_project_root: /var/www
-symfony2_web_server: nginx
-symfony2_php_fpm_socket: localhost:9000
+symfony_site_domain_name: "{{ ansible_fqdn }}"
+
+symfony_project_root: /var/www
+symfony_web_server: nginx
+symfony_php_fpm_socket: localhost:9000
 
 symfony2_bash_completion: true
 
-symfony2_composer_install: true
-symfony2_clear_cache: true
+symfony_composer_install: true
+symfony_clear_cache: true
 
-symfony2_doctrine_schema_update: [] # List of objects with properties "em" and "env"
+symfony_doctrine_schema_update: [] # List of objects with properties "em" and "env"
 
 # not very useful for customisation, but ok for the needs of one site per box
 # don't need ansible_fqdn here, as likely the symfony2_project_root has been overridden in the playbook or vars
-symfony2_cache_path: "{{ symfony2_project_root }}/app/cache"
-symfony2_log_path: "{{ symfony2_project_root }}/app/logs"
+symfony_cache_path: "{{ symfony_project_root }}/app/cache"
+symfony_log_path: "{{ symfony_project_root }}/app/logs"
