remove nginx requirements

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,10 +3,11 @@
 symfony_environment: production
 
 symfony_website_domain_name: "{{ ansible_fqdn }}"
+symfony_project_root: "/var/www/{{ symfony_website_domain_name }}"
 
-symfony_project_root: /var/www
-symfony_web_server: nginx
-symfony_php_fpm_socket: localhost:9000
+symfony_web_server: "nginx"
+symfony_web_server_user: "www-data"
+symfony_web_server_group: "nginx"
 
 symfony2_bash_completion: true
 
@@ -17,5 +18,5 @@ symfony_doctrine_schema_update: [] # List of objects with properties "em" and "e
 
 # not very useful for customisation, but ok for the needs of one site per box
 # don't need ansible_fqdn here, as likely the symfony2_project_root has been overridden in the playbook or vars
-symfony_cache_path: "{{ symfony_project_root }}/app/cache"
-symfony_log_path: "{{ symfony_project_root }}/app/logs"
+symfony_cache_path: "{{ symfony_project_root }}/var/cache"
+symfony_log_path: "{{ symfony_project_root }}/var/logs"
