--- a/tasks/create_app_dir.yml
+++ b/tasks/create_app_dir.yml
@@ -2,7 +2,8 @@
   file: >
     path="{{ symfony_project_root }}/app"
     state=directory
-    owner="{{ nginx_user }}" group="{{ nginx_group }}"
+    owner="{{ symfony_web_server_user }}"
+    group="{{ symfony_web_server_group }}"
     mode=0775
     recurse=true
   sudo: yes
