--- a/tasks/create_logs.yml
+++ b/tasks/create_logs.yml
@@ -1,19 +1,22 @@
-- name: symfony logs 
+- name: symfony logs
   file: >
-    path="{{ symfony_log_path }}"
+    path="{{ item.log_directory || symfony_log_path }}"
     state=directory
-    owner="{{ symfony_web_server_user }}"
-    group="{{ symfony_web_server_group }}"
+    owner="{{ item.root_directory_owning_user || symfony_web_server_user }}"
+    group="{{ item.root_directory_owning_group || symfony_web_server_group }}"
     mode=0775
     recurse=true
   sudo: yes
+  with_items: {{ symfony_websites }}
 
 - name: symfony acl - logs
   shell: >
-    setfacl -R -m u:{{ symfony_web_server_user }}:rwX -m g:{{ symfony_web_server_group }}:rwX {{ symfony_log_path }}
+    setfacl -R -m u:{{ item.root_directory_owning_user || symfony_web_server_user }}:rwX -m g:{{ item.root_directory_owning_user || symfony_web_server_group }}:rwX {{ item.log_directory || symfony_log_path }}
   sudo: yes
+  with_items: {{ symfony_websites }}
 
 - name: symfony acl default - logs
   shell: >
-    setfacl -dR -m u:{{ symfony_web_server_user }}:rwx -m g:{{ symfony_web_server_group }}:rwX {{ symfony_log_path }}
+    setfacl -dR -m u:{{ item.root_directory_owning_group || symfony_web_server_user }}:rwx -m g:{{ item.root_directory_owning_group || symfony_web_server_group }}:rwX {{ item.log_directory || symfony_log_path }}
   sudo: yes
+  with_items: {{ symfony_websites }}
