bug fix with_items entry

--- a/tasks/create_cache.yml
+++ b/tasks/create_cache.yml
@@ -7,16 +7,16 @@
     mode=0775
     recurse=true
   sudo: yes
-  with_items: {{ symfony_websites }}
+  with_items: symfony_websites
 
 - name: symfony acl - cache
   shell: >
     setfacl -R -m u:{{ item.root_directory_owning_user || symfony_web_server_user }}:rwX -m g:{{ item.root_directory_owning_user || symfony_web_server_group }}:rwX {{ item.cache_directory || symfony_cache_path }}
   sudo: yes
-  with_items: {{ symfony_websites }}
+  with_items: symfony_websites
 
 - name: symfony acl default - cache
   shell: >
     setfacl -dR -m u:{{ item.root_directory_owning_group || symfony_web_server_user }}:rwx -m g:{{ item.root_directory_owning_group || symfony_web_server_group }}:rwX {{ item.cache_directory || symfony_cache_path }}
   sudo: yes
-  with_items: {{ symfony_websites }}
+  with_items: symfony_websites
