--- a/tasks/create_logs.yml
+++ b/tasks/create_logs.yml
@@ -7,16 +7,16 @@
     mode=0775
     recurse=true
   sudo: yes
-  with_items: symfony_websites
+  with_items: "{{ symfony_websites }}"
 
 - name: symfony acl - logs
   shell: >
     setfacl -R -m u:{{ item.root_directory_owning_user || symfony_web_server_user }}:rwX -m g:{{ item.root_directory_owning_user || symfony_web_server_group }}:rwX {{ item.log_directory || symfony_log_path }}
   sudo: yes
-  with_items: symfony_websites
+  with_items: "{{ symfony_websites }}"
 
 - name: symfony acl default - logs
   shell: >
     setfacl -dR -m u:{{ item.root_directory_owning_group || symfony_web_server_user }}:rwx -m g:{{ item.root_directory_owning_group || symfony_web_server_group }}:rwX {{ item.log_directory || symfony_log_path }}
   sudo: yes
-  with_items: symfony_websites
+  with_items: "{{ symfony_websites }}"
