adding debug output - retry

--- a/tasks/composer.yml
+++ b/tasks/composer.yml
@@ -1,5 +1,5 @@
 ---
-- debug: var="{{ symfony_websites }}"
+- debug: msg="symfony_websites={{symfony_websites}}"
 
 - name: "run composer install"
   command: composer install --ignore-platform-reqs
