--- a/tasks/composer.yml
+++ b/tasks/composer.yml
@@ -1,8 +1,6 @@
 ---
-- debug: msg="symfony_websites={{symfony_websites}}"
-
-# - name: "run composer install"
-#   command: composer install --ignore-platform-reqs
-#   args:
-#     chdir: "{{ item.root_directory }}"
-#   with_items: "{{ symfony_websites }}"
+- name: "run composer install"
+  command: composer install --ignore-platform-reqs
+  args:
+    chdir: "{{ item.root_directory }}"
+  with_items: "{{ symfony_websites }}"
