--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,8 +2,8 @@
 - include: bash_completion.yml
   when: symfony2_bash_completion
 
-- include: composer.yml
-  when: symfony_composer_install
+# - include: composer.yml
+  # when: symfony_composer_install
 
 - include: create_symfony_dir.yml
 - include: create_cache.yml
