--- a/tasks/create_cache.yml
+++ b/tasks/create_cache.yml
@@ -1,9 +1,9 @@
 - name: symfony cache
   file: >
-    path="{{ item.cache_directory | symfony_cache_path }}"
+    path="{{ item.cache_directory | default(symfony_cache_path) }}"
     state=directory
-    owner="{{ item.root_directory_owning_user | symfony_web_server_user }}"
-    group="{{ item.root_directory_owning_group | symfony_web_server_group }}"
+    owner="{{ item.root_directory_owning_user | default(symfony_web_server_user) }}"
+    group="{{ item.root_directory_owning_group | default(symfony_web_server_group) }}"
     mode=0775
     recurse=true
   sudo: yes
@@ -11,11 +11,11 @@
 
 - name: symfony acl - cache
   shell: >
-    setfacl -R -m u:{{ item.root_directory_owning_user | symfony_web_server_user }}:rwX -m g:{{ item.root_directory_owning_user | symfony_web_server_group }}:rwX {{ item.cache_directory | symfony_cache_path }}
+    setfacl -R -m u:{{ item.root_directory_owning_user | default(symfony_web_server_user) }}:rwX -m g:{{ item.root_directory_owning_user | default(symfony_web_server_group) }}:rwX {{ item.cache_directory | default(symfony_cache_path) }}
   sudo: yes
   with_items: "{{ symfony_websites }}"
 
 - name: symfony acl default - cache
-  shell: > symfony_web_server_user }}:rwx -m g:{{ item.root_directory_owning_group | symfony_web_server_group }}:rwX {{ item.cache_directory | symfony_cache_path }}
+  shell: > symfony_web_server_user }}:rwx -m g:{{ item.root_directory_owning_group | default(symfony_web_server_group) }}:rwX {{ item.cache_directory | default(symfony_cache_path) }}
   sudo: yes
   with_items: "{{ symfony_websites }}"
