--- a/tasks/create_cache.yml
+++ b/tasks/create_cache.yml
@@ -16,6 +16,7 @@
   with_items: "{{ symfony_websites }}"
 
 - name: symfony acl default - cache
-  shell: > symfony_web_server_user }}:rwx -m g:{{ item.root_directory_owning_group | default(symfony_web_server_group) }}:rwX {{ item.cache_directory | default(symfony_cache_path) }}
+  shell: >
+    setfacl -dR -m u:{{ item.root_directory_owning_group | default(symfony_web_server_user) }}:rwx -m g:{{ item.root_directory_owning_group | default(symfony_web_server_group) }}:rwX {{ item.cache_directory | default(symfony_log_path) }}
   sudo: yes
   with_items: "{{ symfony_websites }}"
