--- a/tasks/create_cache.yml
+++ b/tasks/create_cache.yml
@@ -1,6 +1,6 @@
 - name: symfony cache
   file: >
-    path="{{ item.cache_directory | default(symfony_cache_path) }}"
+    path="{{ item.cache_directory }}"
     state=directory
     owner="{{ item.root_directory_owning_user | default(symfony_web_server_user) }}"
     group="{{ item.root_directory_owning_group | default(symfony_web_server_group) }}"
@@ -11,12 +11,12 @@
 
 - name: symfony acl - cache
   shell: >
-    setfacl -R -m u:{{ item.root_directory_owning_user | default(symfony_web_server_user) }}:rwX -m g:{{ item.root_directory_owning_user | default(symfony_web_server_group) }}:rwX {{ item.cache_directory | default(symfony_cache_path) }}
+    setfacl -R -m u:{{ item.root_directory_owning_user | default(symfony_web_server_user) }}:rwX -m g:{{ item.root_directory_owning_user | default(symfony_web_server_group) }}:rwX {{ item.cache_directory }}
   sudo: yes
   with_items: "{{ symfony_websites }}"
 
 - name: symfony acl default - cache
   shell: >
-    setfacl -dR -m u:{{ item.root_directory_owning_group | default(symfony_web_server_user) }}:rwx -m g:{{ item.root_directory_owning_group | default(symfony_web_server_group) }}:rwX {{ item.cache_directory | default(symfony_cache_path) }}
+    setfacl -dR -m u:{{ item.root_directory_owning_group | default(symfony_web_server_user) }}:rwx -m g:{{ item.root_directory_owning_group | default(symfony_web_server_group) }}:rwX {{ item.cache_directory }}
   sudo: yes
   with_items: "{{ symfony_websites }}"
